# slang-math

./: AGENTS.md  CMakeLists.txt  README.md
include/slang-math/: float2.hpp  float2x2.hpp  float3.hpp  float3x3.hpp  float4.hpp  float4x4.hpp  functions.hpp  quaternion.hpp  slang-math.hpp  transform.hpp  uint2.hpp  uint3.hpp  uint4.hpp
tests/: CMakeLists.txt  test_slang_math.cpp
